--- a/package.json
+++ b/package.json
@@ -11,9 +11,23 @@
     "commit": "npm run lint && git-cz"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "@zeit/next-css": "^1.0.1",
+    "autoprefixer": "^9.8.0",
+    "cssnano": "^4.1.10",
+    "material-ui-icons": "^1.0.0-beta.36",
     "next": "9.4.4",
+    "postcss-easy-import": "^3.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-swipeable-views": "^0.13.9",
+    "react-swipeable-views-utils": "^0.13.9",
+    "react-tap-event-plugin": "^3.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -23,6 +37,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
-    "prettier-eslint": "^10.1.1"
+    "postcss-preset-env": "^6.7.0",
+    "prettier-eslint": "^10.1.1",
+    "tailwindcss": "^1.4.6"
   }
 }
